samples/_failures_safe/1761690075_49640a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4ffd2822.c: In function ‘main’:
./samples/SAFE/__tmp_4ffd2822.c:147:26: error: missing terminating " character
  147 |     mat2.rows = read_int("Rows
      |                          ^~~~~
./samples/SAFE/__tmp_4ffd2822.c:147:5: error: expected expression at end of input
  147 |     mat2.rows = read_int("Rows
      |     ^~~~
./samples/SAFE/__tmp_4ffd2822.c:147:17: error: too few arguments to function ‘read_int’
  147 |     mat2.rows = read_int("Rows
      |                 ^~~~~~~~
./samples/SAFE/__tmp_4ffd2822.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_4ffd2822.c:147:5: error: expected declaration or statement at end of input
  147 |     mat2.rows = read_int("Rows
      |     ^~~~
